split controllers into separate JS files

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!--load page script-->
+    <script src="js/animation.js"></script>
+    <script src="js/takequiz.js"></script>
+    <script src="js/makequiz.js"></script>
     <script src="js/kwizecal.js"></script>
 
   </body>
