--- a/pages/makequiz.html
+++ b/pages/makequiz.html
@@ -12,7 +12,8 @@
 
     <!--form-->
     <form class="form-horizontal"
-          role="form">
+          role="form"
+          data-ng-submit="formSubmit()">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
 
