--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/animation.js"></script>
     <script src="js/takequiz.js"></script>
     <script src="js/makequiz.js"></script>
+    <script src="js/quizzes.js"></script>
     <script src="js/kwizecal.js"></script>
 
   </body>
