tidied up, sorted links etc

--- a/pages/header.html
+++ b/pages/header.html
@@ -26,7 +26,7 @@
             About<span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">About Us</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="#">Like and Subscrube</a></li>
           </ul>
         </li>
