--- a/pages/makequiz.html
+++ b/pages/makequiz.html
@@ -5,8 +5,8 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12 text-center">
-        <h1>Create a quiz</h1>
-        <p>Here you can make your very own Kwiz! How exciting!</p>
+        <h1>Create a Kwiz</h1>
+        <h2 class="front_page_title col-sm-12 text-center">Here you can make your very own Kwiz! How exciting!</h2>
       </div>
     </div>
 
@@ -20,7 +20,7 @@
         <!--Title-->
           <div class="form-group">
             <label class="control-label text-center"
-                   for="question">Quiz Title:</label>
+                   for="question">Kwiz Title:</label>
             <input type="text"
                    data-ng-model="formquiz.title"
                    class="form-control"
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-    <!-- buttons (possible duplication - home.html) -->
+      <!-- buttons -->
       <div class="container">
         <div class="row">
           <div class="col-xs-6 text-right">
@@ -77,7 +77,6 @@
           </div>
         </div>
       </div>
-      <pre>{{formquiz | json}}</pre>
     </form>
 
   </div>
