--- a/pages/congrats.html
+++ b/pages/congrats.html
@@ -8,7 +8,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 text-center">
-      <p>Congrats u have sumbiteed a kwiz lucky you !! happy sunshine starts. Go home?</p>
+      <p>Congrats, you have submitted a Kwiz! Go home?</p>
       <a href="#" class="btn btn-primary" id="tp_left_button">Take me home Scotty</a>
     </div>
   </div>
