--- a/pages/footer.html
+++ b/pages/footer.html
@@ -4,7 +4,7 @@
       <div class="col-xs-4"></div>
       <div class="col-xs-4"></div>
       <div class="col-xs-4">
-        <span>© 2016 Kwizical</span>
+        <span>© 2016 Kwizecal</span>
       </div>
     </div>
   </div>
