--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center front_page_title">Welcome to Q'wizi coll - the best website on the Internets</h1>
+  <h1 class="text-center front_page_title">Welcome to Kwizecal - test your knowledge with a Kwiz!</h1>
 </div>
 <div class="container">
   <!--alt tag optimised for SEO-->
@@ -11,10 +11,10 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6 text-right">
-      <a href="#takequiz" class="btn btn-primary" id="tp_left_button">Take A Quiz!</a>
+      <a href="#quizzes" class="btn btn-primary" id="tp_left_button">Take A Kwiz!</a>
     </div>
     <div class="col-xs-6 text-left">
-      <a href="#makequiz" class="btn btn-success" id="tp_right_button">Make A Quiz</a>
+      <a href="#makequiz" class="btn btn-success" id="tp_right_button">Make A Kwiz</a>
     </div>
   </div>
 </div>
