changed directory structure

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -5,7 +5,7 @@
   <!--alt tag optimised for SEO-->
   <img id="group_pic"
   class="img-responsive img-rounded center-block"
-  src=""
+  src="public/img/kwizicowl/kwizicowl3_resized.png"
   alt="KwizicOwl, The Quizzical Owl"/>
 </div>
 <div class="container">
