--- a/public/pages/takequiz.html
+++ b/public/pages/takequiz.html
@@ -17,7 +17,7 @@
         </h3>
       </div>
       <div class="col-sm-6 text-center">
-        <h3 data-ng-show="!running">End of quiz!</h3>
+        <h3 data-ng-show="!running">End of Kwiz!</h3>
         <h3 data-ng-bind="msg + score"></h3>
       </div>
     </div>
