--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/journal/bootstrap.min.css"/>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="public/style.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
     <title>Kwizzical - Home</title>
     <!--load angular - better to do this in the head -
@@ -22,11 +22,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!--load page script-->
-    <script src="js/animation.js"></script>
-    <script src="js/takequiz.js"></script>
-    <script src="js/makequiz.js"></script>
-    <script src="js/quizzes.js"></script>
-    <script src="js/kwizecal.js"></script>
+    <script src="public/js/animation.js"></script>
+    <script src="public/js/takequiz.js"></script>
+    <script src="public/js/makequiz.js"></script>
+    <script src="public/js/quizzes.js"></script>
+    <script src="public/js/kwizecal.js"></script>
 
   </body>
 
