--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,9 +1,10 @@
 <div class="container">
-  <h1 class="text-center front_page_title">Welcome to Kwizecal - test your knowledge with a Kwiz!</h1>
+  <h1 class="text-center front_page_title">Welcome to Kwizecal!</h1>
+  <h3 class="text-center">Test your knowledge and create your own quizzes</h3>
 </div>
 <div class="container">
   <!--alt tag optimised for SEO-->
-  <img id="group_pic"
+  <img id="kwizzicowl-front"
   class="img-responsive img-rounded center-block"
   src="public/img/kwizicowl/kwizicowl3_resized.png"
   alt="KwizicOwl, The Quizzical Owl"/>
