--- a/public/pages/makequiz.html
+++ b/public/pages/makequiz.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-sm-12 text-center">
         <h1>Create a Kwiz</h1>
-        <h2 class="front_page_title col-sm-12 text-center">Here you can make your very own Kwiz! How exciting!</h2>
+        <h3 class="col-sm-12 text-center">Enter questions and answers to create your own quiz. How exciting!</h3>
       </div>
     </div>
 
