--- a/public/pages/quizzes.html
+++ b/public/pages/quizzes.html
@@ -8,7 +8,7 @@
     <a
     data-ng-href="/#/takequiz/{{quiz.id}}"
     data-ng-click="getQuiz(quiz.id)"
-    class="btn btn-block"
+    class="quiz-list-button btn btn-block"
     data-ng-bind="quiz.title"></a>
   </div>
 
