--- a/public/pages/makequiz.html
+++ b/public/pages/makequiz.html
@@ -49,12 +49,12 @@
           </div>
 
           <!--radio button-->
-          <div class="form-group">
+          <div class="form-group radio">
             <h4>Correct answer:</h4>
-            <span>1</span><input type="radio" name="correct" data-ng-model="formquestion.answer" data-ng-value="0" checked="true" />
-            <span>2</span><input type="radio" name="correct" data-ng-model="formquestion.answer" data-ng-value="1"/>
-            <span>3</span><input type="radio" name="correct" data-ng-model="formquestion.answer" data-ng-value="2"/>
-            <span>4</span><input type="radio" name="correct" data-ng-model="formquestion.answer" data-ng-value="3"/>
+            <label class="radio-inline"><input type="radio" name="correct" data-ng-model="formquestion.answer" data-ng-value="0" checked="true" />1</label>
+            <label class="radio-inline"><input type="radio" name="correct" data-ng-model="formquestion.answer" data-ng-value="1" checked="true" />2</label>
+            <label class="radio-inline"><input type="radio" name="correct" data-ng-model="formquestion.answer" data-ng-value="2" checked="true" />3</label>
+            <label class="radio-inline"><input type="radio" name="correct" data-ng-model="formquestion.answer" data-ng-value="3" checked="true" />4</label>
           </div>
 
         </div>
