--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center front_page_title">Welcome to Kwizecal!</h1>
+  <h1 class="text-center page-title">Welcome to Kwizecal!</h1>
   <h3 class="text-center">Test your knowledge and create your own quizzes</h3>
 </div>
 <div class="container">
@@ -12,10 +12,10 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6 text-right">
-      <a href="#quizzes" class="btn btn-primary" id="tp_left_button">Take A Kwiz!</a>
+      <a href="#quizzes" class="btn btn-primary front-page-btn" id="tp_left_button">Take A Kwiz!</a>
     </div>
     <div class="col-xs-6 text-left">
-      <a href="#makequiz" class="btn btn-success" id="tp_right_button">Make A Kwiz</a>
+      <a href="#makequiz" class="btn btn-success front-page-btn" id="tp_right_button">Make A Kwiz</a>
     </div>
   </div>
 </div>
