--- a/public/pages/quizzes.html
+++ b/public/pages/quizzes.html
@@ -1,7 +1,7 @@
 <div data-ng-controller="qlCtrl" class="container">
 
   <div class="col-sm-12 text-center">
-    <h2 data-ng-bind="msg" class="text-center"></h2>
+    <h2 data-ng-bind="msg" class="text-center quizzes-heading"></h2>
   </div>
 
   <div class="col-sm-3" data-ng-repeat="quiz in quizlist">
