--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -12,10 +12,10 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6 text-right">
-      <a href="#quizzes" class="btn btn-primary front-page-btn" id="tp_left_button">Take A Kwiz!</a>
+      <a href="#quizzes" class="btn btn-primary front-page-btn">Take A Kwiz!</a>
     </div>
     <div class="col-xs-6 text-left">
-      <a href="#makequiz" class="btn btn-success front-page-btn" id="tp_right_button">Make A Kwiz</a>
+      <a href="#makequiz" class="btn btn-success front-page-btn">Make A Kwiz</a>
     </div>
   </div>
 </div>
