Added favicon icons

--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -1,3 +1,4 @@
+<!-- Header that gets injected into each page -->
 <nav class="navbar navbar-default navbar-static-top">
   <div class="container navbar-inner">
     <div class="navbar-header">
