--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -15,7 +15,7 @@
       <a href="#quizzes" class="btn btn-primary front-page-btn">Take A Kwiz!</a>
     </div>
     <div class="col-xs-6 text-left">
-      <a href="#makequiz" class="btn btn-success front-page-btn">Make A Kwiz</a>
+      <a href="#makequiz" class="btn btn-success front-page-btn">Make A Kwiz!</a>
     </div>
   </div>
 </div>
