--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Root page into which all content is injected -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB" data-ng-app="kwizecalApp">
   <head>
@@ -5,7 +6,11 @@
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/journal/bootstrap.min.css"/>
     <link href="public/style.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="/public/img/apple-touch-icon-57x57.png"/>
+    <link rel="icon" type="image/png" href="/public/img/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="/public/img/favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/png" href="/public/img/favicon-16x16.png" sizes="16x16"/>
+    <link rel="shortcut icon" href="/public/img/favicon.ico"/>
     <title>Kwizzical - Home</title>
     <!--load angular - better to do this in the head -
     calls to angular.module can only be compiled after the library has been loaded-->
