More commenting including description of animation

--- a/public/pages/congrats.html
+++ b/public/pages/congrats.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!--alt tag optimised for SEO-->
-  <img id="group_pic"
+  <img
   class="img-responsive img-rounded center-block"
   src="public/img/kwizicowl/kwizicowl3_resized.png"
   alt="KwizicOwl, The Quizzical Owl"/>
