--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/journal/bootstrap.min.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'/>
     <link href="public/style.css" rel="stylesheet" type="text/css" />
     <link rel="apple-touch-icon" sizes="57x57" href="/public/img/apple-touch-icon-57x57.png"/>
     <link rel="icon" type="image/png" href="/public/img/favicon-32x32.png" sizes="32x32"/>
@@ -17,12 +18,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
   </head>
-
   <body>
     <span data-header="header"></span>
     <div data-ng-view="data-ng-view"></div>
     <span data-footer="footer"></span>
-
     <!--load bootstrap-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -32,7 +31,5 @@
     <script src="public/js/makequiz.js"></script>
     <script src="public/js/quizzes.js"></script>
     <script src="public/js/kwizecal.js"></script>
-
   </body>
-
 </html>
