--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,19 +1,20 @@
+<!-- A page all about us -->
 <div class="container">
   <h1 class="text-center page-title">About Us</h1>
   <h2 class="text-center">Who are we?</h2>
 </div>
 <div class="container">
-<figure class="figure">
-  <img id="kwizzicowl-front"
-  class="img-responsive img-rounded center-block"
-  src="public/img/kwizicowl/kwizicowl3_resized.png"
-  alt="KwizicOwl, The Quizzical Owl"/>
-  <figcaption class="figure-caption text-center">This is KwizicOwl who runs the show</figcaption>
-</figure>
+  <figure class="figure">
+    <img id="kwizzicowl-front"
+    class="img-responsive img-rounded center-block"
+    src="public/img/kwizicowl/kwizicowl3_resized.png"
+    alt="KwizicOwl, The Quizzical Owl"/>
+    <figcaption class="figure-caption text-center">This is KwizicOwl who runs the show</figcaption>
+  </figure>
 </div>
 <div class="container text-center">
   <div class="row">
-  <h2>KwizicOwl's minions</h2>
+    <h2>KwizicOwl's minions</h2>
     <div class="col-xs-6">
       <h3>George Graver</h3>
     </div>
