--- a/public/pages/footer.html
+++ b/public/pages/footer.html
@@ -1,11 +1,12 @@
+<!-- Footer injected into each page -->
 <footer class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-4"></div>
-      <div class="col-xs-4"></div>
-      <div class="col-xs-4">
-        <span>© 2016 Kwizecal</span>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4">
+				<span>© 2016 Kwizecal</span>
+			</div>
+		</div>
+	</div>
 </footer>
