--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,3 +1,4 @@
+<!-- Main page where user starts -->
 <div class="container">
   <h1 class="text-center page-title">Welcome to Kwizecal!</h1>
   <h3 class="text-center">Test your knowledge and create your own quizzes</h3>
