--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -3,14 +3,14 @@
   <div class="container navbar-inner">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <div ng-controller="animationCtrl">
-          <div ng-include="'public/img/thinlogopath3.svg'"></div>
+        <div data-ng-controller="animationCtrl">
+          <div data-ng-include="'public/img/thinlogopath3.svg'"></div>
         </div>
       </a>
       <button type="button"
       class="navbar-toggle collapsed"
       data-toggle="collapse"
-      data-target="#navbar"
+      data-target="#/navbar"
       aria-expanded="false"
       aria-controls="navbar">
       <span class="sr-only">Toggle navigation</span>
@@ -21,8 +21,8 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#about">About Us</a></li>
+        <li><a href="#/">Home</a></li>
+        <li><a href="#/about">About Us</a></li>
       </ul>
       </div><!--/.nav-collapse -->
     </div>
