--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,7 +1,7 @@
 <!-- Main page where user starts -->
 <div class="container">
   <h1 class="text-center page-title">Welcome to Kwizecal!</h1>
-  <h3 class="text-center">Test your knowledge and create your own quizzes</h3>
+  <h2 class="text-center">Test your knowledge and create your own quizzes</h2>
 </div>
 <div class="container">
   <!--alt tag optimised for SEO-->
@@ -13,10 +13,10 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6 text-right">
-      <a href="#quizzes" class="btn btn-primary front-page-btn">Take A Kwiz!</a>
+      <a href="#/quizzes" class="btn btn-primary front-page-btn">Take A Kwiz!</a>
     </div>
     <div class="col-xs-6 text-left">
-      <a href="#makequiz" class="btn btn-success front-page-btn">Make A Kwiz!</a>
+      <a href="#/makequiz" class="btn btn-success front-page-btn">Make A Kwiz!</a>
     </div>
   </div>
 </div>
